# beetle-backups

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
src/: __init__.py  main.py
src/config/: __init__.py  logging.py  settings.py
src/services/: s3_service.py
